@@ -99,6 +99,7 @@ loom {
     runs {
         client {
             programArgs(["--username", "Player789"])
+            vmArgs("-XX:+EnableDynamicAgentLoading")
         }
     }
 }
